fix skill icons align

--- a/containers/Skills/skills.module.scss
+++ b/containers/Skills/skills.module.scss
@@ -13,13 +13,10 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 30px;
     .icon {
       width: 120px;
       height: 120px;
-      &:not(:first-child) {
-        margin-left: 30px;
-      }
-      margin-top: 30px;
       svg {
         width: 100%;
         height: 100%;
